Recommend FFM over JNA in the 2026.3 JNA note